<resources>
    <string name="app_name">TimeActivity</string>
    <string name="title_tasks">Задачи</string>
    <string name="title_tags">Метки</string>
    <string name="title_settings">Настройки</string>
    <string name="title_stats">Графики</string>
    <string name="title_activity_calendar">Календарь</string>
    <string name="title_begin_new_task">Начать новую задачу</string>
    <string name="title_edit_task">Редактировать задачу</string>
    <string name="title_create_tag">Новая метка</string>
    <string name="title_view_task">Просмотреть задачу</string>
    <string name="title_view_params">ФИЛЬТР</string>
    <string name="title_view_date">ДАТА:</string>
    <string name="title_view_tags">МЕТКИ:</string>
    <string name="title_view_period">ПЕРИОД:</string>
    <string name="title_overall_activity_pie_chart">Распределение активности</string>
    <string name="title_activity_timeline">Суммарная активность по дням</string>
    <string name="title_activity_stacked_timeline">Позадачная активность по дням</string>
    <string name="label_service_screen_lock_watcher">Activity Watcher</string>
    <string name="label_service_worker">Core</string>
    <string name="label_receiver_notification_update">Notification Updater</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hours_mark">ч</string>
    <string name="minutes_mark">м</string>
    <string name="seconds_mark">с</string>
    <string name="caption_today">Сегодня</string>
    <string name="caption_accumulated_tasks_duration">Остальные</string>
    <string name="caption_empty_chart">Нет данных</string>
    <string name="content_empty">Нет данных</string>
    <string name="caption_progress">Загрузка&#8230;</string>
    <string name="label_color">Цвет</string>
    <string name="search_by_name">Поиск по названию&#8230;</string>
    <string name="backup_export_error_task_load">Ошибка при загрузке задач</string>
    <string name="backup_export_error_tag_load">Ошибка при загрузке меток</string>
    <string name="backup_export_error_write">Не удалось сохранить статистику</string>
    <string name="backup_export_success">Сохранение статистики завершено. Файл %s</string>
    <string name="backup_dialog_message">Пожалуйста, подождите</string>
    <string name="backup_dialog_export_title">Экспорт статистики</string>
    <string name="backup_dialog_import_title">Импорт статистики</string>
    <string name="backup_import_error">Не удалось импортировать данные</string>
    <string name="backup_import_success">Статистика успешно импортирована</string>
    <string name="backup_import_error_tags">Не удалось сохранить список меток</string>
    <string name="backup_import_error_tasks">Не удалось сохранить список задач</string>
    <string name="task_activities_sum_time">Общее время: </string>
    <string name="action_search">Поиск</string>
    <string name="action_toggle_filter_on">Показать фильтр</string>
    <string name="action_toggle_filter_off">Скрыть фильтр</string>
    <string name="action_settings">Настройки</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_reset_filter">СБРОС</string>
    <string name="action_remove_task">Удалить задачу</string>
    <string name="action_accept">ОК</string>
    <string name="action_accept_yes">Да</string>
    <string name="action_perform_remove">Удалить</string>
    <string name="action_undo_remove">Вернуть</string>
    <string name="action_stop_task">Остановить</string>
    <string name="ime_action_done">Готово</string>
    <string name="ime_action_create">Создать</string>
    <string name="ime_action_filter">Показать</string>
    <string name="ime_action_next">Далее</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_start_task">Начать задачу</string>
    <string name="action_create_tag">Создать метку</string>
    <string name="action_view_activities">Показать активности</string>
    <string name="action_show_task_activities">Показать в виде графика</string>
    <string name="action_task_added">Задача %1$s добавлена</string>
    <string name="action_proceed">Продолжить</string>
    <string name="hint_new_task">Начать новую задачу</string>
    <string name="hint_task_description">Описание задачи</string>
    <string name="hint_task_tags">Метки</string>
    <string name="hint_task_tags_arent_selected">Метки не выбраны</string>
    <string name="hint_edit">Редактировать</string>
    <string name="hint_remove">Удалить</string>
    <string name="hint_edit_task">Редактировать задачу</string>
    <string name="hint_view_task">Просмотреть задачу</string>
    <string name="hint_task_description_is_empty">Пожалуйста, введите описание задачи</string>
    <string name="hint_task_removed">Задача удалена</string>
    <string name="hint_tag_removed">Метка удалена</string>
    <string name="hint_tag_name">Название метки</string>
    <string name="hint_edit_tag_name">Изменить название</string>
    <string name="hint_edit_tag_color">Выбрать цвет</string>
    <string name="hint_no_filtered_tasks">Нет задач по заданному фильтру</string>
    <string name="hint_no_task_stats">Статистика появится после активации задач</string>
    <string name="hint_no_filtered_tasks_stats">По заданному фильтру статистика отсутствует</string>
    <string name="hint_choose_date">не выбрана</string>
    <string name="hint_reset_filter">Сбросить фильтр</string>
    <string name="hint_choose_filter_period">Выбрать период</string>
    <string name="hint_choose_period">не задан</string>
    <string name="hint_new_time_span">Добавить новую активность</string>
    <string name="hint_task_time_spans_removed">Активности удалены.</string>
    <string name="error_unknown">Неизвестная ошибка.</string>
    <string name="error_loading_data">Ошибка при загрузке данных</string>
    <string name="error_unable_to_load_task_list">Ошибка при загрузке списка задач</string>
    <string name="error_unable_to_save_task">Не удалось сохранить задачу</string>
    <string name="error_unable_to_remove_task">Не удалось удалить задачу</string>
    <string name="error_unable_to_load_tag_list">Ошибка при загрузке списка меток</string>
    <string name="error_unable_to_save_tag">Ошибка при сохранении метки</string>
    <string name="error_unable_to_remove_tag">Ошибка при удалении метки</string>
    <string name="error_unable_to_backup_tag">Ошибка при восстановлении метки</string>
    <string name="error_unable_to_backup_task">Ошибка при восстановлении задачи</string>
    <string name="error_tag_already_exists">Такая метка уже существует</string>
    <string name="error_tag_name_is_empty">Название метки не задано</string>
    <string name="error_unable_to_load_task_activities">Ошибка при загрузке списка активностей</string>
    <string name="error_unable_to_load_calendar_data">Ошибка при загрузке данных для календаря</string>
    <string name="error_time_span_overlaps">Активность не может пересекаться с другой активностью.</string>
    <string name="error_time_span_belongs_to_future">Активность не может захватывать будущее.</string>
    <string name="error_time_span_bad_range">Временной отрезок неверное задан.</string>
    <string name="error_cannot_edit_current_time_span">Текущая активность не может быть изменена</string>
    <string name="dialog_cancel_task_changes_warning_title">Задача не сохранена</string>
    <string name="dialog_cancel_task_changes_warning_message">Завершить редактирование без сохранения?</string>
    <string name="dialog_remove_task_warning_title">Удаление</string>
    <string name="dialog_remove_task_warning_message">Удалить задачу?</string>
    <string name="dialog_edit_tag_name_title">Введите название метки</string>
    <string name="dialog_edit_tag_color_title">Выберите цвет</string>
    <string name="dialog_cancel_tag_changes_warning_title">Метка не сохранена</string>
    <string name="dialog_cancel_tag_changes_warning_message">Завершить редактирование без сохранения?</string>
    <string name="dialog_delete_test_data_title">Предупреждение</string>
    <string name="dialog_delete_test_data">Все демонстрационный задачи будут удалены. Продолжить?</string>
    <string name="dialog_reset_help">Показать все подсказки заново?</string>
    <string name="chart_legend_totally">Всего: %s</string>
    <string name="category_calendar">Календарь</string>
    <string name="calendar_title_start_time">Время начала</string>
    <string name="calendar_summary_start_time">Начало шкалы времени с %s</string>
    <string name="calendar_title_end_time">Время окончания</string>
    <string name="calendar_summary_end_time">Конец шкалы времени в %s</string>
    <string name="calendar_title_all_activity">Вся активность</string>
    <string name="calendar_summary_all_activity">Показывать активность за пределами шкалы</string>
    <string name="category_statistics">Статистика</string>
    <string name="statistics_title_export_statistics">Экспортировать статистику</string>
    <string name="statistics_summary_save_to_file">Сохранить всю набранную статистику в файл</string>
    <string name="statistics_title_import_statistics">Импортировать статистику</string>
    <string name="statistics_summary_load_from_file">Загрузить сохраненную ранее статистику из файла</string>
    <string name="category_help">Помощь</string>
    <string name="help_title_show_help">Показывать помощь</string>
    <string name="help_title_reset">Сбросить помощь</string>
    <string name="help_summary_show_all_tips">Показать все подсказки заново</string>
    <string name="help_title_delete_demo">Сбросить демо</string>
    <string name="help_summary_delete_demo">Удалить демонстрационную статистику</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="all_time">Все время</string>
    <string name="another">Другой</string>
    <string name="settings_incorrect_time">Время начала не может быть больше времени окончания</string>
    <string-array name="period_array">
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
        <item>@string/all_time</item>
    </string-array>
    <string-array name="activities_period_array">
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
        <item>@string/all_time</item>
        <item>@string/another</item>
    </string-array>
    <plurals name="task_count">
        <item quantity="one">Найдена %d задача</item>
        <item quantity="few">Найдены %d задачи</item>
        <item quantity="many">Найдено %d задач</item>
        <item quantity="other">Найдено %d задач</item>
    </plurals>
    <plurals name="tags_count">
        <item quantity="one">\u0020c меткой: %s</item>
        <item quantity="few">\u0020c метками: %s</item>
        <item quantity="many">\u0020c метками: %s</item>
        <item quantity="other">\u0020c метками: %s</item>
    </plurals>
    <string name="no_activity">нет активности</string>
    <string name="recent_activity">Последняя активность</string>
    <string name="no_filtered_activity">не найдено активности по заданным критериям</string>
    <string name="incorrect_filter_end_date_short">Дата окончания меньше даты начала</string>
    <string name="incorrect_filter_start_date_short">Дата начала больше даты окончания</string>
    <string name="company_name">ООО СимбирСофт</string>
    <string name="company_url">www.simbirsoft.com</string>
    <string name="all_question">По общим вопросам: \ninfo@simbirsoft.com</string>
    <string name="work_question">По вопросам сотрудничества: \nrequest@simbirsoft.com</string>
    <string name="company_telephon">Телефон для справок: \n+7 (8422) 44 66 91</string>
</resources>