<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textSize="21sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                style="@style/AboutUsText"/>

            <TextView
                android:id="@+id/companyURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_url"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                style="@style/AboutUsText"
                android:drawableLeft="@drawable/ic_world"/>

            <TextView
                android:id="@+id/allQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_question"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                style="@style/AboutUsText"
                android:drawableLeft="@drawable/ic_all_question"/>

            <TextView
                android:id="@+id/workQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_question"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                style="@style/AboutUsText"
                android:drawableLeft="@drawable/ic_cooperation"/>

            <TextView
                android:id="@+id/company_telephon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_telephon"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                style="@style/AboutUsText"
                android:drawableLeft="@drawable/ic_company_telephon"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>